plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '4.0.2'
}

def querydslDir = "build/generated/querydsl"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = file(querydslDir)
}

ext {
	snippetsDir = file("build/generated-snippets")
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Spring Boot backend for Vue application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-mysql'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	implementation 'net.coobird:thumbnailator:0.4.21'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	runtimeOnly 'com.mysql:mysql-connector-j'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// ✅ 기본 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// ✅ REST Docs(MockMvc)
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	// ✅ Security 테스트(필수급)
	testImplementation 'org.springframework.security:spring-security-test'

	testImplementation 'com.h2database:h2'

	// ✅ Testcontainers (버전은 BOM으로 통일)
	testImplementation platform("org.testcontainers:testcontainers-bom:1.21.4")
	testImplementation "org.testcontainers:junit-jupiter"
	testImplementation "org.testcontainers:mysql"
	testImplementation "org.testcontainers:jdbc"

	// (선택) 스프링 부트 테스트컨테이너 스타터는 있어도 되고 없어도 됨
	testImplementation "org.springframework.boot:spring-boot-testcontainers"

}

test {
	maxParallelForks = 1
}

tasks.named('test') {
	useJUnitPlatform()
	outputs.dir snippetsDir
}

tasks.named('asciidoctor') {
	dependsOn test

	// ✅ 테스트(-x test)로 snippets가 없을 수 있으니 optional 처리(Gradle 9+ 대응)
	inputs.dir(snippetsDir).optional(true)

	attributes(
			'snippets': snippetsDir,
			'stylesdir': 'styles',
			'stylesheet': 'custom.css',
			'linkcss': true
	)

	// styles 폴더를 결과물로 복사
	resources {
		from("src/docs/asciidoc") {
			include "styles/**"
		}
	}
}

tasks.register('copyRestDocs', Copy) {
	dependsOn tasks.named('asciidoctor')
	from layout.buildDirectory.dir("docs/asciidoc")
	into layout.projectDirectory.dir("src/main/resources/static/docs")
	duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

// ✅ build 하면 REST Docs도 자동 생성 + static/docs로 복사 (CI/로컬 문서 생성용)
tasks.named('build') {
	dependsOn tasks.named('copyRestDocs')
}

// ❌ Docker에서 bootJar만 만들 때 docs를 강제하면 안 됨(빌드 실패 원인)
// tasks.named('bootJar') { dependsOn tasks.named('copyRestDocs') }

// ✅ 대신 docs 포함 jar가 필요하면 별도 태스크로 제공(선택)
tasks.register('bootJarWithDocs') {
	dependsOn tasks.named('copyRestDocs')
	dependsOn tasks.named('bootJar')
}
